info: Carga de script de BD y actualización de conexiones

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=root"
   }
 }
