--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Database=ContasiscorpBD;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=root"
   }
 }
