--- a/src/AuthService/appsettings.json
+++ b/src/AuthService/appsettings.json
@@ -6,14 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=root"
+  },
   "JwtSettings": {
     "Key": "your-secret-key-must-be-at-least-32-characters-long-here",
     "Issuer": "auth-service",
     "Audience": "microservices-api",
     "ExpirationMinutes": 60
-  },
-  "Supabase": {
-    "Url": "https://your-supabase-url.supabase.co",
-    "Key": "your-supabase-anon-key"
   }
 }
