--- a/src/ProductService/appsettings.json
+++ b/src/ProductService/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Supabase": {
-    "Url": "https://your-supabase-url.supabase.co",
-    "Key": "your-supabase-anon-key"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=root"
   }
 }
