--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-SUPABASE_URL=https://your-supabase-url.supabase.co
-SUPABASE_ANON_KEY=your-supabase-anon-key
-JWT_SECRET=your-secret-key-must-be-at-least-32-characters-long-here
+# Base de Datos Local PostgreSQL
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=ContasiscorpBD
+DB_USER=postgres
+DB_PASSWORD=root
+
+# API Backend
+VITE_API_URL=http://localhost:5000
