--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
