fix: correcciones post pruebas y se quitaron datos harcodeados

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ContasiscorpBD;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=ContasiscorpBD;Username=postgres;Password=root"
   }
 }
