--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=ContasiscorpBD;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=ContasiscorpBD;Username=postgres;Password=root;No Reset On Close=true"
   }
 }
